[project]
name = "ultra-fast-image-generation-mac-silicon-z-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers",
    "gradio>=6.0.1",
    "httpx[socks]>=0.28.1",
    "huggingface-hub>=0.36.0",
    "pillow>=12.0.0",
    "protobuf>=6.33.1",
    "sdnq",
    "sentencepiece>=0.2.1",
    "socksio>=1.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
sdnq = { git = "https://github.com/Disty0/sdnq.git" }
